Sun Jan 23 01:49:51 2005  Marek Brudka  <mbrudka@aster.pl>

        * examples/OEP/Display/NavDisplayGUI_exec/README (Module):
        * examples/OEP/Display/NavDisplayGUI_exec/NavDisplayGUI.mpc (Module):
        Changes related with separation of GUI reactors.
        The additional information is avalaible in ChangeLog at REACTOR_SEPARATION branch (below).

        Mon Dec  6 00:39:19 2004  Marek Brudka  <mbrudka@aster.pl>

        * examples/OEP/Display/NavDisplayGUI_exec/README (Module):
        Remove reference to ACE_HAS_QT.

        * examples/OEP/Display/NavDisplayGUI_exec/NavDisplayGUI.mpc (Module):
        Removed deprecated qt_moc base project.

Fri Jan 21 17:27:12 2005  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/tests/NodeApplicationTest/NodeAppTest.mpc

          Fixed dependency relationship by making
          NodeAppTest_RoundTrip_stub depending on CIAO_DnC_Container.

        * examples/OEP/Display/NavDisplayGUI_exec/NavDisplayGUI_exec.cpp

          Fixed warning on Debian_Full_Reactor build. The warning is
          caused because of assigning "const char*" to a "char *" type.

          Thanks Johnny Willemsen <jwillemsen@remedy.nl> for pointing
          these.

Thu Jan 20 18:29:47 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/Any_Handler.cpp:
        * DAnCE/Config_Handlers/Utils.cpp:
        * performance-tests/Protocols/Sender/Sender_exec.cpp:
        * tools/Daemon/Daemon_Impl.cpp:

          Converted all ACE_{static,dynamic,reinterpret,const}_cast macros
          calls to their standard C++ counterparts using new
          bin/ACE-casts-convert script.  The ACE cast macros were
          deprecated back in ACE 5.4.2.

Thu Jan 20 09:54:04 2005  Nanbor Wang  <nanbor@cs.wustl.edu>

        * examples/OEP/Display/descriptors/NOTE.txt:
        * examples/OEP/Display/descriptors/NOTE-win.txt: 

          Fixed the discrepancy on using Assembly_Deployer. Thanks to 