@@ -1,3 +1,13 @@
+Sun Jan 30 20:30:46 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* DAnCE/NodeApplicationManager/ImplementationInfo.cpp:
+	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:
+	* DAnCE/ciao/Container_Base.cpp:
+	* DAnCE/ciao/NodeApplication_Impl.cpp:
+
+	  Added missing header include directives that are necessary due
+	  to inter-header dependency reductions in ACE.
+
 Sun Jan 23 01:49:51 2005  Marek Brudka  <mbrudka@aster.pl>
 
         * examples/OEP/Display/NavDisplayGUI_exec/README (Module):
